--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
     "target": "es2017",
     "module": "commonjs",
     /* Experimental Options */
-    "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
-    "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
+    "experimentalDecorators": true, /* Enables experimental support for ES7 decorators. */
+    "emitDecoratorMetadata": true, /* Enables experimental support for emitting type metadata for decorators. */
     "strictNullChecks": false
   },
   "include": [
@@ -14,7 +14,7 @@
     "app/**/*.ts",
     "config/**/*.ts",
     "mock/**/*.ts",
-    "test/**/*.ts", "app/extend/helper.js", "app/middleware/jwt.js", "app/web/framework/request.js"
+    "test/**/*.ts",
   ],
   "exclude": [
     "public",
