--- a/app/web/tsconfig.json
+++ b/app/web/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../config/tsconfig.json",
   "compilerOptions": {
     "jsx": "preserve",
-    "target": "es5",      
+    "target": "es5",
     "module": "esnext",
     "sourceMap": true,
     "lib": [
@@ -16,7 +16,7 @@
     "./typings/global.d.ts"
   ],
   "include": [
-    "./page/**/**.tsx", "page/antd/store/config.ts",
+    "./page/**/**.tsx"
   ],
   "exclude": [
     "node_modules",
